Trying to fix mobile whitespace issue

--- a/style.css
+++ b/style.css
@@ -161,8 +161,8 @@ html, body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 110%;
+  height: 120%;
   z-index: -1;
 	background-image: url("/starry_background.png");
 }
